--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - uses: tgymnich/fork-sync@v2.0.10
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           head: main
           base: main
           merge_method: rebase
