--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -11,7 +11,10 @@ jobs:
     steps:
       - uses: tgymnich/fork-sync@v2.0.10
         with:
+          owner: WorldDownTown
+          repo: SFSymbol
           token: ${{ secrets.GITHUB_TOKEN }}
           head: main
           base: main
           merge_method: rebase
+
